--- a/public/index.html
+++ b/public/index.html
@@ -156,15 +156,15 @@
                 <div class="fx-hero-stats">
                     <div class="fx-stat-card">
                         <h3 class="fx-stat-number" id="statRemaining">20</h3>
-                        <p class="fx-stat-label">Requests Available</p>
+                        <p class="fx-stat-label">Limit Tersisa</p>
                     </div>
                     <div class="fx-stat-card">
                         <h3 class="fx-stat-number" id="statUsed">0</h3>
-                        <p class="fx-stat-label">Requests Used</p>
+                        <p class="fx-stat-label">Terpakai</p>
                     </div>
                     <div class="fx-stat-card">
                         <h3 class="fx-stat-number" id="statKeys">0</h3>
-                        <p class="fx-stat-label">API Keys</p>
+                        <p class="fx-stat-label">Total Apikeys</p>
                     </div>
                     <div class="fx-stat-card">
                         <h3 class="fx-stat-number">24/7</h3>
@@ -231,7 +231,7 @@
                     <!-- Usage Stats -->
                     <div class="fx-dashboard-card fx-usage-stats">
                         <div class="fx-card-header">
-                            <h3><i class="fas fa-chart-line"></i> Usage Statistics</h3>
+                            <h3><i class="fas fa-chart-line"></i> statik penggunaan</h3>
                         </div>
                         <div class="fx-card-body">
                             <div class="fx-usage-chart" id="usageChart">
@@ -239,15 +239,15 @@
                             </div>
                             <div class="fx-usage-summary">
                                 <div class="fx-usage-item">
-                                    <span class="fx-usage-label">Total Requests</span>
+                                    <span class="fx-usage-label">Total request</span>
                                     <span class="fx-usage-value" id="totalRequests">0</span>
                                 </div>
                                 <div class="fx-usage-item">
-                                    <span class="fx-usage-label">Remaining</span>
+                                    <span class="fx-usage-label">Sisa Limit</span>
                                     <span class="fx-usage-value" id="remainingRequests">20</span>
                                 </div>
                                 <div class="fx-usage-item">
-                                    <span class="fx-usage-label">Success Rate</span>
+                                    <span class="fx-usage-label">Tingkat kesuksesan</span>
                                     <span class="fx-usage-value" id="successRate">0%</span>
                                 </div>
                             </div>
